objects/FL_Sync__c.object
<CustomObject>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Components__c</fullName>
        <label>Number of Components</label>
        <summaryForeignKey>FL_Sync_Component__c.Sync__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Succeed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Succeed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Type__c</fullName>
        <label>Sync Type</label>
        <picklist>
            <picklistValues>
                <fullName>Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Download</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sync</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sync_Type__c</columns>
        <columns>Number_of_Components__c</columns>
        <columns>Job_Completed__c</columns>
        <columns>Succeed__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sync Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>